--- a/docs/notes/week4/TBL-MLR.Rmd
+++ b/docs/notes/week4/TBL-MLR.Rmd
@@ -28,11 +28,15 @@ output:
 Multiple linear regression is essentially adding more predictors. A mathematical representation is 
 
 $$Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \cdots + \beta_p X_p  + \epsilon.$$
+And the idea of the optimization is also similar that, we want to minimize the squared errors given a set of observed data. 
+
+$$\underset{\beta_0, \beta_1, \ldots, \beta_p}{\arg\min} \frac{1}{n} \sum_{i=1}^n \big( y_i - \beta_0 - \beta_1 x_{i1} - \beta_2 x_{i2} \cdots - \beta_2 x_{ip}\big)^2$$
+
 It is not straight forward to solve these parameters when given a set of data. This involves applications of some linear algebra:
 
-$$\widehat{\boldsymbol \beta}= (\mathbf{X}^\text{T} \mathbf{X})^{-1} \mathbf{X}^\text{T} \mathbf{y} $$
+$$\widehat{\boldsymbol \beta}= (\mathbf{X}^\text{T} \mathbf{X})^{-1} \mathbf{X}^\text{T}\mathbf{y}$$
 
-However, this done using the `lm()` function. For example, if we want to include the longitude in the skin cancer data, we can specify two variables using the `+` sign in the right hand side of `~`:
+This can be done using the `lm()` function. For example, if we want to include the longitude in the skin cancer data, we can specify two variables using the `+` sign in the right hand side of `~`:
 
 ```{r}
     skincancer = read.table("skin.txt", header = TRUE)
