--- a/week4.Rmd
+++ b/week4.Rmd
@@ -44,9 +44,9 @@ There are also several questions about more advanced topics in linear regression
 
 ## Reading Material
 
-  * [[Correlation and Independence](notes/week4/TBL-Correlation.html)]; Original `.Rmd` [`r xfun::embed_file('docs/notes/week4/TBL-Correlation.Rmd', text = 'Source File')`]
-  * [[Simple Linear Regression](notes/week4/TBL-SLR.html)]; Original `.Rmd` [`r xfun::embed_file('docs/notes/week4/TBL-SLR.Rmd', text = 'Source File')`]
-  * [[Multiple Linear Regression and Confounding Variables](notes/week4/TBL-MLR.html)]; Original `.Rmd` [`r xfun::embed_file('docs/notes/week4/TBL-MLR.Rmd', text = 'Source File')`]
+  * [[Correlation and Independence](notes/week4/TBL-Correlation.html)] [`.Rmd` `r xfun::embed_file('docs/notes/week4/TBL-Correlation.Rmd', text = 'Source File')`] 
+  * [[Simple Linear Regression](notes/week4/TBL-SLR.html)] [`.Rmd` `r xfun::embed_file('docs/notes/week4/TBL-SLR.Rmd', text = 'Source File')`] [[Skin Cancer Data](notes/week4/skin.txt)]
+  * [[Multiple Linear Regression and Confounding Variables](notes/week4/TBL-MLR.html)] [`.Rmd` `r xfun::embed_file('docs/notes/week4/TBL-MLR.Rmd', text = 'Source File')`]
 
 ## Discussion Session
 
