--- a/week4.Rmd
+++ b/week4.Rmd
@@ -47,7 +47,8 @@ There are also several questions about more advanced topics in linear regression
   * [[Correlation and Independence](notes/week4/TBL-Correlation.html)] [`.Rmd` `r xfun::embed_file('docs/notes/week4/TBL-Correlation.Rmd', text = 'Source File')`] 
   * [[Simple Linear Regression](notes/week4/TBL-SLR.html)] [`.Rmd` `r xfun::embed_file('docs/notes/week4/TBL-SLR.Rmd', text = 'Source File')`] [[Skin Cancer Data](data/skin.txt)]
   * [[Multiple Linear Regression and Confounding Variables](notes/week4/TBL-MLR.html)] [`.Rmd` `r xfun::embed_file('docs/notes/week4/TBL-MLR.Rmd', text = 'Source File')`]
+  * [Cholera Data](notes/week4/Cholera.csv)
 
 ## Discussion Session
 
-  * [Cholera Data](notes/week4/Cholera.csv)
+  * [High-dimensional Issues](notes/week4/TBL-HighDimension.html)
