--- a/week5.Rmd
+++ b/week5.Rmd
@@ -51,3 +51,4 @@ There are also several questions about more advanced topics in linear regression
 
 ## Discussion Session
 
+  * [Model Evaluations]
