--- a/docs/notes/week5/TBL-OR.Rmd
+++ b/docs/notes/week5/TBL-OR.Rmd
@@ -35,3 +35,80 @@ Genotype AA | 690 | 436 | 1126
 Genotype Aa/aa | 310  | 564 | 874
 Total | 1000 | 1000 | 2000  
 
+Why this is not valid for calculating the RR? Because we can arbitorily decide the number of events and non-events. Recall that the definition of RR is 
+
+$$\frac{A / (A+B)}{C / (C+D)}$$
+
+$\quad$       | Event | No Event | Total
+-----: | :----: | :----: | :----:
+Exposed | A | B | A+B
+Unexposed | C  | D | C+D
+Total | A+C | B+D | A+B+C+D
+
+If we are going to __double the sample size of the No Event group__, this will double the size of both $B$ and $D$. Then, this becomes 
+
+$$\frac{A / (A+2 \times B)}{C / (C+2 \times D)}$$
+Which is usually not the same as the original one. Hence, we may want to use a different quantify to define the difference of probably across the groups. 
+
+## Odds Ratio
+
+For a binary variable with probability $p$ of being 1, __Odds__ is defined as $p / (1-p)$. The Odds Ratio is simply the ratio of odds from the two groups (exposed / unexposed). Based on our previous table, we would have 
+
+$$\text{OR} = \frac{A / B}{C / D} = \frac{AD}{BC}$$
+Suppose we again want to double the sample size of the No Event group, we would have 
+
+$$\text{OR} = \frac{A / (2 \times B)}{C / (2 \times D)} = \frac{AD}{BC}$$
+Hence, odds ratio (OR) can be used in the case-control study. We can perform OR using R. We will use this artificial gene cancer association table as an example. Not again that the orientation of the data will only affect the numerical value, but not the conclusion of the significance (think about why?).
+
+```{r}
+  library(epitools)
+  
+  # we need to specify the data of the first column, then second column
+  freqtable = matrix(c(690, 310, 436, 565),nrow = 2, ncol = 2)
+  
+  # this is for naming the items properly (not a necessary step)
+  # the R function will automatically assign them some name if you leave them empty. 
+  rownames(freqtable) = c("Treatment", "Control")
+  colnames(freqtable) = c("Cured", "Not Cured")  
+  
+  freqtable
+  
+  # use the odds ratio function
+  oddsratio(freqtable)
+```
+
+The result has a similar structure as the RR calculation (`riskratio`). And it is clear that the OR is significantly different from 1. If we would like to get the OR of treatment vs. control, simply take 1/2.882189 = 0.3469585, and the confidence interval would be 1 / (2.401274, 3.464739) = (0.4164456, 0.2886220). You can validate this using the following code:
+
+```{r}
+  oddsratio(freqtable[c(2,1), ])$measure
+```
+
+## Example: Vaccine Data
+
+Although the effectiveness of a vaccine is not measured using OR, we can still calculate the quantity based on the observed data, since OR is valid for prospective and retrospective studies. 
+
+$\quad$       | Varicella | Non-case
+-----:        | :----:    | :----: 
+Vaccinated    | 18        | 134 
+Unvaccinated  | 3         | 4
+
+```{r}
+  Chickenpox = matrix(c(4, 134, 3, 18),nrow = 2, ncol = 2)
+  oddsratio(Chickenpox)
+```
+
+## Practice questions 
+
+  1. Among all mentioned studies (randomized trial, case-control and observational), which is valid for Relative Risk and which is valid for Odds Ratio?
+  
+  2. From Table 2 in [McLaughlin (2003)](papers/McLaughlin2003Extensive.pdf), we can also calculate the OR. Based on this information, can you directly calculate the OR of Left vs. Right (instead of Right vs. Left) and it confidence intervel?
+  
+```{r}
+  # Please be careful about the table construction
+  MT = matrix(c(93, 36, 22, 82),nrow = 2, ncol = 2)
+  rownames(MT) = c("Left", "Right")
+  colnames(MT) = c("Non-Infected", "Infected")
+
+  # use the risk ratio function
+  riskratio(MT)$measure
+```
