--- a/docs/notes/week5/TBL-OR.Rmd
+++ b/docs/notes/week5/TBL-OR.Rmd
@@ -106,7 +106,7 @@ Unvaccinated  | 3         | 4
 ```{r}
   # Please be careful about the table construction
   MT = matrix(c(36, 93, 82, 22),nrow = 2, ncol = 2)
-  rownames(MT) = c("Left", "Right")
+  rownames(MT) = c("Right", "Left")
   colnames(MT) = c("Non-Infected", "Infected")
   MT
   
